# proxsync

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
agent/: .env.example  README.md  pyproject.toml
agent/app/: __init__.py  __main__.py  main.py
agent/app/api/: deps.py
agent/app/core/: concurrency.py  config.py  errors.py  logging.py  security.py
agent/app/executors/: base.py  checksum.py  pvesm.py  rclone.py  restore.py  vzdump.py
agent/app/schemas/: enums.py  requests.py  responses.py
agent/app/services/: artifact_service.py  backup_service.py  restore_service.py  storage_service.py  sync_service.py
agent/app/tasks/: models.py  progress.py  registry.py
agent/app/validators/: artifacts.py  identifiers.py  paths.py  remotes.py
agent/tests/: conftest.py  test_api_backup.py  test_api_restore.py  test_api_sync.py  test_config.py  test_executors.py  test_progress.py  test_rclone.py  test_security.py  test_services.py  test_subprocess_descendants.py  test_sync_service.py  test_task_registry.py  test_validators_artifacts.py  test_validators_paths.py  test_validators_remotes.py
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_baseline_schema.py  0002_run_plan_and_cancelled_status.py  0003_restore_vocabulary.py  0004_notification_dedupe_and_notify_logs.py
backend/app/: __init__.py  __main__.py  main.py
backend/app/api/: deps.py  mappers.py
backend/app/clients/: agent_client.py  circuit_breaker.py  proxmox_client.py  telegram_client.py
backend/app/core/: config.py  cron.py  crypto.py  errors.py  events.py  log_sink.py  logging.py  rate_limit.py  retention_guard.py  security.py
backend/app/db/: base.py  session.py  types.py
backend/app/repositories/: audit_repository.py  backup_history_repository.py  backup_job_repository.py  backup_run_repository.py  base.py  guest_repository.py  log_repository.py  notification_repository.py  refresh_token_repository.py  restore_repository.py  retention_repository.py  settings_repository.py  storage_snapshot_repository.py  sync_task_repository.py  user_repository.py
backend/app/schemas/: agent.py  auth.py  backup.py  dashboard.py  enums.py  guests.py  health.py  logs.py  notifications.py  proxmox.py  restore.py  retention.py  settings.py  storage.py  sync.py
backend/app/services/: auth_service.py  backup_service.py  dashboard_service.py  health_service.py  inventory_service.py  log_service.py  notification_service.py  notification_templates.py  restore_service.py  retention_service.py  schedule_service.py  settings_service.py  storage_service.py  (+1 more)
backend/tests/: conftest.py  test_agent_client.py  test_auth_api.py  test_backup_flow.py  test_backup_jobs_api.py  test_backup_runner.py  test_backup_service.py  test_backups_api.py  test_config.py  test_core_security.py  test_cron.py  test_dashboard_api.py  test_database.py  test_events.py  test_events_api.py  test_guests_api.py  test_health_service.py  test_inventory.py  test_log_sink.py  test_log_writer.py  test_logs_api.py  test_migrations.py  test_notification_events.py  test_notification_service.py  test_notification_templates.py  test_notification_worker.py  test_notifications_api.py  test_proxmox_client.py  test_restore_service.py  test_restore_worker.py  test_restores_api.py  test_retention_api.py  test_retention_guard.py  test_retention_service.py  test_retention_worker.py  test_scheduler.py  test_settings_api.py  test_storage_api.py  test_storage_service.py  test_storage_worker.py  (+4 more)
(+152 files in other folders)
