[project]
name = "proxsync-agent"
version = "0.1.0"
description = "ProxSync Backup Agent — privileged executor for Proxmox VE backup and restore operations"
readme = "README.md"
license = { text = "MIT" }
# 3.11 is the floor so the agent installs on PVE 8 (Debian 12) as well as PVE 9 (Debian 13).
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.13,<3",  # CI is on 1.x; mypy 2.x tightens Protocol matching (see docs/HANDOFF.md)
    "ruff>=0.8",
]

[project.scripts]
proxsync-agent = "app.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PTH", "RET", "SIM", "ARG", "S"]
ignore = ["S101"]  # assert is fine in tests

[tool.ruff.lint.per-file-ignores]
# Test data is literal captured vzdump/pvesm output; wrapping it would stop it being a fixture.
"tests/*" = ["S", "ARG", "E501"]
# The error hierarchy reads better at call sites as `raise NotFound(...)` than `NotFoundError`.
"app/core/errors.py" = ["N818"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "structlog.*"
ignore_missing_imports = true
