[project]
name = "proxsync-backend"
version = "0.1.0"
description = "ProxSync dashboard API — backup orchestration, policy and history for Proxmox VE"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "apscheduler>=3.11,<4",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "cryptography>=43.0",
    "httpx>=0.27",
    "structlog>=24.4",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13,<2",  # CI is on 1.x; mypy 2.x tightens Protocol matching (see docs/HANDOFF.md)
    "ruff>=0.8",
]

[project.scripts]
proxsync-api = "app.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PTH", "RET", "SIM", "ARG", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ARG", "E501"]
"alembic/versions/*" = ["E501", "N999"]
# The error hierarchy reads better at call sites as `raise NotFound(...)` than `NotFoundError`.
"app/core/errors.py" = ["N818"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["structlog.*", "argon2.*", "apscheduler.*"]
ignore_missing_imports = true
